glsl_preproc = [ python, join_paths(meson.current_source_dir(), 'main.py'), '@INPUT@', '@OUTPUT@' ]
glsl_deps = files(
  'macros.py',
  'statement.py',
  'templates.py',
  'templates/call.c.j2',
  'templates/function.c.j2',
  'templates/glsl_block.c.j2',
  'templates/struct.c.j2',
  'variables.py',
)
